[project]
name = "AnarchySaver"
version = "1.0"
authors = [{ name = "bisnap" }]
description = """
- Saves Anarchy between save quits
- Adds keybinds to add and remove Anarchy
- Allows for uncapping max Anarchy
"""

[tool.sdkmod]
name = "Anarchy Saver"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = "https://github.com/bisnapYT/AnarchySaver"
version = "1.0"
supported_games = "BL2"
coop_support = "No"