[project]
name = "AnarchySaver"
version = "1.1.1"
authors = [{ name = "bisnap" }]
description = """
- Saves and restores Anarchy between save quits
- Allows for uncapping max Anarchy
- Adds keybinds to add, subtract, and display current Anarchy
"""

[tool.sdkmod]
name = "Anarchy Saver"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = "https://github.com/bisnapYT/AnarchySaver/raw/refs/heads/main/AnarchySaver.sdkmod"
version = "1.1.1"
supported_games = ["BL2"]
coop_support = "HostOnly"